# Faustus-Friend

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
src/: App.css  App.tsx  main.tsx  settings.test.ts  settings.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: clipboard_queue.rs  diagnostics.rs  lib.rs  main.rs
src/components/: AboutPanel.tsx  BuyingSection.tsx  CalculatorSection.tsx  CompareSection.tsx  ConversionSection.tsx  ExchangeRateInput.tsx  GridSection.tsx  NotesSection.tsx  QuickCalcSection.tsx  ScratchpadSection.tsx  SellingSection.tsx  SettingsPanel.tsx
src/lib/: calculator.test.ts  calculator.ts  clipboardQueue.ts  compare.test.ts  compare.ts  diagnostics.ts  formula.test.ts  formula.ts  grid.test.ts  grid.ts  hotkeys.test.ts  hotkeys.ts  inputSanitize.ts  links.ts  notes.ts  quickCalcFormat.test.ts  quickCalcFormat.ts  scratchpad.ts  selectAllOnFocus.ts  startup.test.ts  startup.ts
